# ragflow-ai-platform

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  day_wise.txt  main.py  pyproject.toml  requirements.txt
backend/: app.py  test_api.py  test_backend.py  test_config.py  test_constants.py  test_document_loader.py  test_embedding_service.py  test_exception.py  test_indexing_pipeline.py  test_integration.py  test_llm_service.py  test_logger.py  test_prompts.py  test_rag_chain.py  test_response_cleaner.py  test_retriever.py  test_text_splitter.py  test_vector_store.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  constants.py  exception.py  logger.py  prompts.py
backend/app/models/: request_models.py  response_models.py
backend/app/pipelines/: indexing_pipeline.py
backend/app/services/: document_loader.py  embedding_service.py  llm_service.py  rag_chain.py  retriever.py  text_splitter.py  vector_store.py
backend/app/utils/: response_cleaner.py
backend/vectorstore/: index.faiss  index.pkl
docs/: 00_Project_Charter.md  01_Project_Overview.md  02_System_Architecture.md  03_Backend_Documentation.md  04_Frontend_Documentation.md  05_API_Documentation.md  07_User_Manual.md  08_Maintenance_Guide.md  09_Troubleshooting.md  10_Developer_Guide.md
docs/project_logs/: Day01.md  Day02.md  Day03.md
docs/sprint_reports/: Sprint01.md  Sprint02.md  Sprint03.md  Sprint04.md
frontend/: app.py
